[package]
name = "dashboar_starter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"

dashboar = { path = "../../../../dashboar", version = "0.1.0" }
rand = "0.8.5"

[lib]
name = "dashboar_starter"
path = "lib.rs"
